# organaizer

./: .gitignore  Dockerfile  README.md  compose.training.yml  compose.yml  requirements.txt  run.jupyter.sh  run.sh  training.sh
components.del/organaizer-ui.del/: Dockerfile  nginx.conf
components.del/organaizer.del/: Dockerfile  main.py  pyproject.toml
components.del/organaizer.del/config/: config.py
components.del/organaizer.del/controllers/: application.py
components.del/organaizer.del/core/: __init__.py  decorators.py
components.del/organaizer.del/domain/: agent.py  health.py
components.del/organaizer.del/entities/: __init__.py
components.del/organaizer.del/src/: log.py
components.del/organaizer.del/src/dao/: __init__.py
components.del/organaizer.del/src/model/: __init__.py  detection.py
components.del/organaizer.del/src/model/response/: __init__.py
components.del/organaizer.del/src/service/: box.py  detection.py  dimensions.py  plot.py
components.del/training/: Dockerfile  app.py  (+3 more)
components/organaizer/: Dockerfile  app.py  pyproject.toml
components/organaizer/src/: log.py
components/organaizer/src/dao/: __init__.py
components/organaizer/src/decorator/: __init__.py
components/organaizer/src/model/: __init__.py  entities.py
components/organaizer/src/model/response/: __init__.py
components/organaizer/src/service/: __init__.py  detection.py
src/: app.py  camera.py  clp.py  config.py  domain.py  instructions.txt  log.py  plot.py  utils.py
training/: 01 Data Analysis.ipynb  02 YOLO Model Training.ipynb  03 Running.ipynb  Dockerfile
(+69 files in other folders)
